--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
         <div class="portfolio-content">
             <div class="portfolio-img">
                 <div class="card">
-                    <a href=">
-                        <img src="assets/images/e-comm web.png"  alt="">
+                    <a href="https://vercel.com/railwayard/e-commerce-website/Gn5CsNi3wQerFc58DkQnKh6Ajai1">
+                        <img src="assets/images/e-comm web.png"  alt="e-comm">
                     </a>
                     <div class="card_content">
                             <h3>E-commerce Website</h3>
@@ -321,7 +321,7 @@
             <div class="portfolio-img">
                 <div class="card">
                     <a href="https://www.figma.com/file/Ql9VD7Dg3wAMTAwVkBXh5J/Untitled?type=design&node-id=0%3A1&mode=design&t=emxhz6eQ6DYokKGq-1">
-                        <img src="assets/images/3d carousel.png" alt="">
+                        <img src="assets/images/3d carousel.png" alt="Smoothie">
                     </a>
                     <div class="card_content">
                             <h3>3d Carousal</h3>
@@ -330,18 +330,18 @@
             </div>
             <div class="portfolio-img">
                 <div class="card">
-                    <a href="">
-                        <img src="assets/images/travel web.png" alt="">
+                    <a href="https://vercel.com/railwayard/travel-website/7gNxxQkNJ9vdr6TEvPGkwJ1mgnsa">
+                        <img src="assets/images/travel web.png" alt="travel">
                     </a>
                     <div class="card_content">
-                        <h3>Tour Website</h3>
+                        <h3>Travel Website </h3>
                     </div>
                 </div>
             </div>
             <div class="portfolio-img">
                 <div class="card">
                     <a href="https://www.figma.com/file/LfXTzEDj7ZszFxuiWbNxpJ/Untitled?type=design&node-id=0%3A1&mode=dev">
-                        <img src="assets/images/movie ticket.png" alt="">
+                        <img src="assets/images/movie ticket.png" alt="ticket">
                     </a>
                     <div class="card_content">
                         <h3>Movie Ticket</h3>
